cm4all-workshop (6.0.17) unstable; urgency=low

  * translation: time out after 30 seconds
  * spawn: do not ignore SIGTERM in spawned processes

 --   

cm4all-workshop (6.0.16) unstable; urgency=low

  * spawn: don't follow symlinks for BIND_MOUNT

 -- Max Kellermann <mk@cm4all.com>  Wed, 04 Oct 2023 09:18:59 +0200

cm4all-workshop (6.0.15) unstable; urgency=low

  * spawn: create dummy process to hold the systemd scope
  * translation: allow dots in CGROUP_SET

 -- Max Kellermann <mk@cm4all.com>  Wed, 20 Sep 2023 09:57:17 +0200

cm4all-workshop (6.0.14) unstable; urgency=low

  * add workaround for running in unprivileged containers
  * systemd: add AssertKernelVersion>=5.12

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Aug 2023 20:15:26 +0200

cm4all-workshop (6.0.13) unstable; urgency=low

  * require Linux kernel 5.12
  * spawn: use the Linux 5.12 mount API

 -- Max Kellermann <mk@cm4all.com>  Fri, 02 Jun 2023 11:26:10 +0200

cm4all-workshop (6.0.12) unstable; urgency=low

  * workshop: remove syslog support
  * spawn: combine multiple EXIT in one datagram
  * spawn: improved handling of spawner startup errors
  * add JavaScript-based PolicyKit rules (version 121 or newer)
  * debian: allow polkitd instead of policykit-1

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Apr 2023 22:08:52 +0200

cm4all-workshop (6.0.11) unstable; urgency=low

  * spawn: given the spawner the highest possible CPU and I/O weight
  * spawn: combine multiple KILL commands on one datagram
  * spawn: drop support for cgroup1
  * spawn: workaround for stuck spawner if execve() is delayed by shrinker

 -- Max Kellermann <mk@cm4all.com>  Thu, 02 Mar 2023 18:10:03 +0100

cm4all-workshop (6.0.10) unstable; urgency=low

  * spawn: support MOUNT_HOME inside MOUNT_EMPTY
  * pond: set type=JOB
  * drop support for /etc/default/cm4all-workshop (deprecated since v4)
  * drop Boost dependency

 -- Max Kellermann <mk@cm4all.com>  Wed, 08 Feb 2023 16:03:40 +0100
