@@ -84,8 +84,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             meson \
-            libsystemd-dev \
-            libdbus-1-dev \
             libcurl4-openssl-dev \
             libgtest-dev \
             libpq-dev
