@@ -20,16 +20,16 @@ You need:
 - `libfmt <https://fmt.dev/>`__
 - `libpq <https://www.postgresql.org/>`__
 - `CURL <https://curl.haxx.se/>`__
-- `D-Bus <https://www.freedesktop.org/wiki/Software/dbus/>`__
-- `systemd <https://www.freedesktop.org/wiki/Software/systemd/>`__
 - `Meson 0.56 <http://mesonbuild.com/>`__ and `Ninja <https://ninja-build.org/>`__
 
 Optional dependencies:
 
+- `D-Bus <https://www.freedesktop.org/wiki/Software/dbus/>`__
 - `libcap2 <https://sites.google.com/site/fullycapable/>`__ for
   dropping unnecessary Linux capabilities
 - `libseccomp <https://github.com/seccomp/libseccomp>`__ for system
   call filter support
+- `systemd <https://www.freedesktop.org/wiki/Software/systemd/>`__
 
 Run ``meson``::
 
