@@ -7,7 +7,9 @@
 
 #include <fmt/core.h>
 
+#ifdef HAVE_LIBSYSTEMD
 #include <systemd/sd-journal.h>
+#endif // HAVE_LIBSYSTEMD
 
 LogBridge::LogBridge(EventLoop &event_loop,
 		     const char *_plan_name, const char *_job_id,
@@ -30,11 +32,15 @@ LogBridge::OnPipeLine(std::span<char> line) noexcept
 		buffer.push_back('\n');
 	}
 
+#ifdef HAVE_LIBSYSTEMD
 	if (enable_journal)
 		sd_journal_send("MESSAGE=%.*s", int(line.size()), line.data(),
 				"WORKSHOP_PLAN=%s", plan_name.c_str(),
 				"WORKSHOP_JOB=%s", job_id.c_str(),
 				nullptr);
+#else
+	constexpr bool enable_journal = false;
+#endif // HAVE_LIBSYSTEMD
 
 	if (max_buffer_size == 0 && !enable_journal)
 		fmt::print(stderr, "[{}:{}] {}\n", plan_name, job_id,
